# api-gateway-sample

./: Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: task-definition-sit.json
src/: cli.py  main.py
src/core/: enum.py  exception.py  handler.py  response.py
src/core/fastapi/: __init__.py  app.py  exception.py  logging.py  middleware.py  router.py  security.py
src/core/httpx/: client.py  decorator.py
src/core/pydantic/: field.py  model.py
src/settings/: __init__.py  header.py  logging.py  logging_conf.yaml
src/test/: conftest.py
